--- a/content/post/dataeng_etl.adoc
+++ b/content/post/dataeng_etl.adoc
@@ -303,4 +303,11 @@ I definitely want to try out some of these - perhaps the Airbyte one since that'
 
 ## Data Engineering in 2022
 
-TODO INDEX HERE
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
+* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
+* link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
+* link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
+* link:/2022/10/24/data-engineering-in-2022-wrangling-the-feedback-data-from-current-22-with-dbt[Wrangling the feedback data from Current 22 with dbt]
+* Query & Transformation Engines [TODO]
+* link:/2022/09/14/data-engineering-resources/[Resources]
